# sugarchain-umami

./: Makefile.am  configure.ac
build-aux/m4/: sugarchain_find_bdb48.m4  sugarchain_qt.m4  sugarchain_subdir_to_include.m4
build_msvc/: libsecp256k1_config.h  msvc-autogen.py  sugarchain_config.h.in
build_msvc/sugarchaind/: bitcoind.vcxproj
ci/test/: 00_setup_env_android.sh  00_setup_env_arm.sh  00_setup_env_i686_centos.sh  00_setup_env_i686_multiprocess.sh  00_setup_env_mac.sh  00_setup_env_mac_native_arm64.sh  00_setup_env_native_qt5.sh  (+13 more)
contrib/: filter-lcov.py
doc/: JSON-RPC-interface.md  REST-interface.md  developer-notes.md  fuzzing.md  init.md  tor.md  zmq.md
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoind.1  sugarchain-cli.1  sugarchain-qt.1  sugarchain-tx.1  sugarchain-util.1  sugarchain-wallet.1  sugarchaind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addressindex.h  addrman.h  addrman_impl.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  bitcoin-chainstate.cpp  bitcoin-cli.cpp  blockencodings.h  blockfilter.h  chain.h  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.h  coins.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.h  deploymentinfo.h  deploymentstatus.h  external_signer.h  flat-database.h  flatfile.h  hash.h  headerssync.h  (+62 more)
test/: config.ini.in  get_previous_releases.py
(+783 files in other folders)
